fix: remove nav bar icons extra space

--- a/_sass/components/icon.scss
+++ b/_sass/components/icon.scss
@@ -1,6 +1,6 @@
 .icon {
     vertical-align: middle;
     width: 1.25em;
-    padding-right: 5px;
+    // padding-right: 2.5px;
     margin-bottom: 5px;
 }
